{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 99,
  "lineage": "2ad977ec-fc21-bb6a-0b33-5fe16130197d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:058264427819:instance/i-0160cdf278f94aaa2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0160cdf278f94aaa2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-003c31d41e5bf5bbe",
            "private_dns": "ip-192-168-1-75.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.75",
            "public_ip": "18.212.150.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a308eeb3a4ed0f72",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043afeb40a03ece63",
            "tags": {
              "Environment": "production",
              "Name": "lab-002.nginx"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lab-002.nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b43e707e650d6b3"
            ]
          },
          "dependencies": [
            "aws_key_pair.nginx_key",
            "aws_security_group.nginx_sg",
            "aws_subnet.nginx_subnet_public",
            "aws_vpc.nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nginx_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264427819:internet-gateway/igw-037473e1cf23e47d1",
            "id": "igw-037473e1cf23e47d1",
            "owner_id": "058264427819",
            "tags": {
              "Name": "lab-002.nginx_IGW"
            },
            "tags_all": {
              "Name": "lab-002.nginx_IGW"
            },
            "vpc_id": "vpc-0ec0cffff31851b2f"
          },
          "dependencies": [
            "aws_vpc.nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nginx_RouteTable_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264427819:route-table/rtb-06ac9383a2de2d60a",
            "id": "rtb-06ac9383a2de2d60a",
            "owner_id": "058264427819",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037473e1cf23e47d1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-002.ninx_ROUTE"
            },
            "tags_all": {
              "Name": "lab-002.ninx_ROUTE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec0cffff31851b2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nginx_IGW",
            "aws_vpc.nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nginx_RouteTable_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02686ea5ef95799f8",
            "route_table_id": "rtb-06ac9383a2de2d60a",
            "subnet_id": "subnet-043afeb40a03ece63"
          },
          "dependencies": [
            "aws_internet_gateway.nginx_IGW",
            "aws_route_table.nginx_RouteTable_public",
            "aws_subnet.nginx_subnet_public",
            "aws_vpc.nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264427819:security-group/sg-06b43e707e650d6b3",
            "description": "aws_nginx_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b43e707e650d6b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "18.206.107.24/29"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "201.191.46.91/32"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws_nginx_security_group",
            "name_prefix": "",
            "owner_id": "058264427819",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec0cffff31851b2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nginx_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264427819:subnet/subnet-0408830a3755d1818",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0408830a3755d1818",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264427819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-002.nginx_private"
            },
            "tags_all": {
              "Name": "lab-002.nginx_private"
            },
            "vpc_id": "vpc-0ec0cffff31851b2f"
          },
          "dependencies": [
            "aws_vpc.nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nginx_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264427819:subnet/subnet-043afeb40a03ece63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043afeb40a03ece63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264427819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-002.nginx_public"
            },
            "tags_all": {
              "Name": "lab-002.nginx_public"
            },
            "vpc_id": "vpc-0ec0cffff31851b2f"
          },
          "dependencies": [
            "aws_vpc.nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nginx_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264427819:vpc/vpc-0ec0cffff31851b2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-05720edbf23c0dafd",
            "default_route_table_id": "rtb-0ed9e728ddebec0f4",
            "default_security_group_id": "sg-0446a043c635bc6bb",
            "dhcp_options_id": "dopt-0ff915b79b9365341",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec0cffff31851b2f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed9e728ddebec0f4",
            "owner_id": "058264427819",
            "tags": {
              "Name": "lab-002.nginx"
            },
            "tags_all": {
              "Name": "lab-002.nginx"
            }
          }
        }
      ]
    }
  ]
}